--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --webpack -p 9999",
-    "build": "next build --webpack -p 9999",
-    "start": "next start",
+    "build": "next build --webpack",
+    "start": "next start -p 9999",
     "lint": "eslint"
   },
   "dependencies": {
